--- a/bulldogbrain/templates/dayChronoligical.html
+++ b/bulldogbrain/templates/dayChronoligical.html
@@ -25,7 +25,7 @@
                     {% for assignments in assignments %}
                     <tr>
                         <td>
-                            <form id="completion" action="/list" method="post">
+                            <form id="completion" action="/urgent" method="post">
                                 <input autocomplete="off" type="checkbox" id="assignment_id" name="assignment_id" value="{{ assignments.id }}" onclick="submit()" required>
                             </form>
                             <!-- Source: https://www.quora.com/How-can-I-submit-two-forms-with-one-button -->
@@ -67,7 +67,7 @@
                     {% for events in events %}
                     <tr>
                         <td>
-                            <form id="completion" action="/list" method="post">
+                            <form id="completion" action="/urgent" method="post">
                                 <input autocomplete="off" type="checkbox" id="event_id" name="event_id" value="{{ events.event_id }}" onclick="submit()" required>
                             </form>
                             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
